Add api contract to support v1 functionality
